--- a/index.html
+++ b/index.html
@@ -21,24 +21,18 @@
     </div>
   </div>
 
-  <header class="navbar-bg">
-    <div class="navbar">
-      <div class="navbar-logo">
+  <header class="header-bg">
+    <div class="header">
+      <div class="header-logo">
         <a href="#">FlexBlog</a>
       </div>
-      <ul>
-        <li>
-          <a href="#about">Sobre</a>
-        </li>
-        <li>
-          <a href="#products">Produtos</a>
-        </li>
-        <li>
-          <a href="#price">Preço</a>
-        </li>
-        <li>
-          <a href="quality">Qualidade</a>
-        </li>
+      <nav class="navbar">
+        <ul>
+          <li><a href="#about">Sobre</a></li>
+          <li><a href="#products">Produtos</a></li>
+          <li><a href="#price">Preço</a></li>
+          <li><a href="quality">Qualidade</a></li>
+      </nav>
       </ul>
     </div>
   </header>
