--- a/index.html
+++ b/index.html
@@ -13,16 +13,13 @@
 </head>
 
 <body>
-  <div class="superinfo-bg">
-    <div class="superinfo">
+  <div class="top-info">
       <p>Seg / Sex - 08:00 às 18:00</p>
       <a href="tel:+552199999999">+55 21 9999-9999</a>
       <p>Av. Ali Perto, 330, Botafogo - RJ</p>
-    </div>
   </div>
 
-  <header class="header-bg">
-    <div class="header">
+  <header class="header">
       <div class="header-logo">
         <a href="#">FlexBlog</a>
       </div>
@@ -32,9 +29,8 @@
           <li><a href="#products">Produtos</a></li>
           <li><a href="#price">Preço</a></li>
           <li><a href="quality">Qualidade</a></li>
+        </ul>
       </nav>
-      </ul>
-    </div>
   </header>
 
   <h1 class="introduction">Novos Valores e<br>Propriedades de CSS</h1>
@@ -149,7 +145,7 @@
       <p>assine e fique por dentro das novidades</p>
     </div>
     <form action="" class="newsletter-form">
-      <input type="text" placeholder="Digite seu e-mail">
+      <input type="email" placeholder="Digite seu e-mail">
       <button type="submit">Assinar</button>
     </form>
   </section>
